--- a/src/app/PageAdmin/admin-company-list/admin-company-list.component.html
+++ b/src/app/PageAdmin/admin-company-list/admin-company-list.component.html
@@ -1,4 +1,6 @@
 <div class="col-md-8">
+  <button (click)="sortBy('raisonSociale')">Sort by Raison Sociale</button>
+  <button (click)="sortBy('ville')">Sort by Ville</button>
   <cdk-virtual-scroll-viewport itemSize="100" class="VSviewport">
     <table class="table table-hover table-striped list">
       <thead class="head sticky">
@@ -29,7 +31,7 @@
           </th>
         </tr>
       </thead>
-      <ng-container *cdkVirtualFor="let seller of sellers; let idx = index">
+      <ng-container *cdkVirtualFor="let seller of sellersObservable | async; let idx = index">
         <tr>
           <th>
             {{seller.raisonSociale}}
