--- a/src/app/PageAdmin/admin-company-list/admin-company-list.component.css
+++ b/src/app/PageAdmin/admin-company-list/admin-company-list.component.css
@@ -4,7 +4,12 @@
 }
 
 .VSviewport {
-    margin: 5vh auto;
+    margin: 1vh auto;
+}
+
+.form {
+    display: block;
+    margin: auto;
 }
 
 .icons {
@@ -44,5 +49,10 @@
     .VSviewport {
         width: 72vw;
         height: 60vh;
+    }
+
+    .searchForm {
+        width: 96%;
+        margin: auto;
     }
 }
