--- a/src/app/PageAdmin/admin-company-list/admin-company-list.component.html
+++ b/src/app/PageAdmin/admin-company-list/admin-company-list.component.html
@@ -1,10 +1,16 @@
-<div class="col-md-8">
-  <form [formGroup]="sortCompanyForm" (ngSubmit)="onSubmit()">
+<div class="container mt-2">
+  <form [formGroup]="sortCompanyForm" (ngSubmit)="onSubmit()" class="searchForm">
     <div class="form-group row">
-      <input formControlName="filterValue" type="text" class="form-control" id="filterValue">
+      <div class="input-group">
+        <input formControlName="filterValue" type="text" class="form-control" id="filterValue">
+        <div class="input-group-append">
+          <button type="submit" class="btn btn-outline-secondary">Rechercher</button>
+        </div>
+      </div>
     </div>
-    <button type="submit">Rechercher</button>
   </form>
+</div>
+<div class="col-md-8 mt-5">
   <cdk-virtual-scroll-viewport itemSize="100" class="VSviewport">
     <table class="table table-hover table-striped list">
       <thead class="head sticky">
