--- a/src/app/All/navbar/navbar.component.html
+++ b/src/app/All/navbar/navbar.component.html
@@ -25,7 +25,7 @@
         <!-- TODO: *ngIf on the two next li for connected people and not connected people -->
         <li class="nav-item">
           <a class="nav-link" (click)="click()" data-toggle= "modal"  [attr.data-target]="'#' + modal">
-            <img class="connect" src="../../../assets/connexion.png" *ngIf="buyerService.getAuthenticatedRole() != 'ROLE_ADMIN'">
+            <img class="connect" src="../../../assets/connexion.png">
           </a>
         </li>
         <li class="nav-item">
