--- a/src/app/Buyer/announce-piece/announce-piece.component.css
+++ b/src/app/Buyer/announce-piece/announce-piece.component.css
@@ -1,4 +1,3 @@
-
 .piecePage {
     box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
     margin-top: 5vh;
@@ -7,7 +6,6 @@
 
 .announcePiecePage {
     margin-bottom: 20px;
-
 }
 
 .announcePrice {
@@ -20,6 +18,7 @@
 
 .panier {
     width: 100%;
+    border-radius: 0px 0px 4px 4px;
 }
 
 .shop {
@@ -42,6 +41,16 @@
     box-shadow: 0 28px 16px -26px rgba(0, 0, 0);
 }
 
+.sautAnnonce {
+    margin-bottom: 15px;
+}
+
+
+.announceRating {
+    color: #FF8C00;
+    font-size: 1.5em;
+}
+
 @media screen and (max-width: 769px) {
     .announceImageDiv {
         margin-bottom: 25px;
@@ -59,14 +68,4 @@
         padding-top: 0;
         margin-left: 15px;
     }
-}
-
-.sautAnnonce {
-    margin-bottom: 15px;
-}
-
-
-.announceRating {
-    color: #FF8C00;
-    font-size: 1.5em;
 }
