--- a/src/app/All/navbar/navbar.component.html
+++ b/src/app/All/navbar/navbar.component.html
@@ -14,26 +14,27 @@
       <span class="navbar-toggler-icon"></span>
     </button>
 
-    <div class="collapse navbar-collapse offset-7 " id="navbarSupportedContent">
-      <ul class="navbar-nav row rightLinks">
-        <li class="nav-item">
+    <div class="collapse navbar-collapse offset-7 mt-1" id="navbarSupportedContent">
+      <div class="navbar-nav row rightLinks">
+        <div class="nav-item col-sm-1">
           <a class="nav-link" routerLink="/panier">
             <img class="shop" src="../../../assets/shopping.png">
             <span class="numberOfArticles">{{nbArticles}}</span>
           </a>
-        </li>
+        </div>
+        
         <!-- TODO: *ngIf on the two next li for connected people and not connected people -->
-        <li class="nav-item">
+        <div class="nav-item offset-sm-1 col-sm-1">
           <a class="nav-link" (click)="click()" data-toggle= "modal"  [attr.data-target]="'#' + modal">
             <img class="connect" src="../../../assets/connexion.png">
           </a>
-        </li>
-        <li class="nav-item">
+        </div>
+        <div class="nav-item offset-sm-1 col-sm-1">
           <a class="nav-link">
-            <img src="../../../assets/exit.png" *ngIf="buyerService.isUserLoggedIn()" class="deco mb-3" (click)="logout()" routerLink="/">
+            <img src="../../../assets/exit.png" *ngIf="buyerService.isUserLoggedIn()" class="deco" (click)="logout()" routerLink="/">
           </a>
-        </li>
-      </ul>
+        </div>
+      </div>
     </div>
   </nav>
 </div>
