--- a/src/app/Seller/page-announce-pro/tab-announce/tab-announce.component.css
+++ b/src/app/Seller/page-announce-pro/tab-announce/tab-announce.component.css
@@ -3,9 +3,9 @@
     padding-left:15px;
     border-right:1px solid #dfdfdf;
 }
-.groupOfText:not(:last-child){
+/* .groupOfText:not(:last-child){
     margin:0px 0px 33% 0px;
-}
+} */
 
 .groupOfText{
     margin-right:30px;
@@ -24,8 +24,9 @@
 }
 .card-body{
     padding:1.65rem;
-    font-family:Montserrat, Arial, Helvetica, sans-serif;
+    font-family: 'Montserrat', Arial, Helvetica, sans-serif;
     font-weight: 600;
+    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
 }
 .accessMore {
     margin-top:auto;
@@ -43,4 +44,31 @@
 .btn-warning{
     background-color:#FFC419;
     min-width:70px;
+}
+
+.year {
+    margin-top: 30px;
+}
+
+.modele {
+    margin-bottom: 40px;
+}
+
+
+@media screen and (max-width: 768px) {
+    .image {
+        width: 250px;
+        height: 200px;
+        display: block;
+        margin: auto;
+    }
+
+    .announceText {
+        text-align: center;
+        border: none;
+    }
+
+    .accessMore {
+        text-align: center;
+    }
 }
