--- a/src/app/Seller/page-announce-pro/tab-announce/tab-announce.component.html
+++ b/src/app/Seller/page-announce-pro/tab-announce/tab-announce.component.html
@@ -3,11 +3,11 @@
     <div class="card">
         <div class="card-body">
             <div class="announceItem row">
-                <div class="col-4 announceImage">
+                <div class="col-lg-4  col-sm-12 announceImage">
                     <img [src]="announce.image" placeholder="image" class="image">
                 </div>
-                <div class="col-4 announceText text">
-                    <div class="groupOfText">
+                <div class="col-lg-4 col-sm-12 announceText text-center">
+                    <div class="groupOfText year col-sm-12">
                         <div>
                             Année:
                             <div class="text-muted">
@@ -16,7 +16,7 @@
                         </div>
                     </div>
 
-                    <div class="groupOfText">
+                    <div class="groupOfText model col-sm-12">
                         <div>
                             Moto:
                         </div>
@@ -25,7 +25,7 @@
                         </div>
                     </div>
 
-                    <div class="groupOfText">
+                    <div class="groupOfText type col-sm-12">
                         <div>
                             Type:
                         </div>
@@ -33,13 +33,25 @@
                             {{announce.pieceName}}
                         </div>
                     </div>
+
+                    <div class="groupOfText description col-sm-12">
+                            <div>
+                                Déscritpion:
+                            </div>
+                            <div class="text-muted">
+                                {{announce.description}}
+                            </div>
+                    </div>
                 </div>
 
-                <div class="col-4 accessMore">
-                    <div class="description">
+                <div class="col-lg-4 col-sm-12 accessMore">
+ <!--                    <div class="description">
+                        <div>
+                            Déscritpion:
+                        </div>
                         {{announce.description}}
-                    </div>
-                    <div class="price">
+                    </div> -->
+                    <div class="price ">
                         Prix: {{announce.price}}€
                     </div>
                 </div>
