admin filters for company done

--- a/src/app/PageAdmin/admin-company-list/admin-company-list.component.css
+++ b/src/app/PageAdmin/admin-company-list/admin-company-list.component.css
@@ -57,7 +57,11 @@
     }
 
     .searchForm {
-        width: 96%;
+        width: 75%;
         margin: auto;
+    }
+
+    .sortFilterContainer {
+        display: flex;
     }
 }
