--- a/src/app/All/navbar/navbar.component.css
+++ b/src/app/All/navbar/navbar.component.css
@@ -1,46 +1,29 @@
 .navbar {
     z-index: 600000;
+    height: 90px;
 }
 
-.deco {
-    font-size: 0.8em;
+
+.material-icons{
+    font-size: 48px;
+    color: black;
+    margin-top: 25px;
 }
 
-.connect {
-    width: 40px;
+.exit {
+    margin-top: 10px;
+    margin-left: 40px;
 }
 
-.nav-link{
-/*     max-height:56px;
-    max-width:56px;
-    cursor:pointer; */
-}
-
-a img{
-    height:36px;
-    width:36px;
-}
-@media screen and (max-width: 8000px)
-
-{
-    a{
-        font-size:1.5em;
-        font-weight:bold;
-    }
-}
-
-@media screen and (max-width: 600px)
-
-{
-    a{
-        font-size:1.3em;
-        font-weight:bold;
-    }
+.compte {
+    margin-left: 40px;
+    cursor: pointer;
 }
 
 .websiteLogo {
-    width: 2.5em !important;
-    height: 2.5em !important;
+    width: 3em !important;
+    height: 3em !important;
+    margin-left: 30px;
 }
 
 @media screen and (max-width: 769px) {
@@ -89,7 +72,7 @@ a img{
     padding:2px 5px 2px 5px;
     position: relative;
     bottom: 1.3em;
-    bottom: 50px;
+    bottom: 70px;
     left: 30px;
 }
 
