--- a/src/app/Buyer/panier/panier.component.html
+++ b/src/app/Buyer/panier/panier.component.html
@@ -81,10 +81,10 @@
 
   <div class="row text-center mt-2 mb-4">
     <div class="col-12 col-md-6 mt-2">
-  <a href="#" class="btn btn-warning btn-lg text-white" role="button" aria-disabled="true">Poursuivre mes achats</a>
+  <a href="#" class="btn btn-warning btn-lg" role="button" aria-disabled="true">Poursuivre mes achats</a>
     </div>
   <div class="col-12 col-md-6 mt-2">
-  <a href="#" class="btn btn-warning btn-lg text-white" role="button" aria-disabled="true">Valider ma commande</a>
+  <a href="#" class="btn btn-warning btn-lg" role="button" aria-disabled="true">Valider ma commande</a>
     </div>
 </div>
 
