coorectifs bugs console buyer

--- a/src/app/Sign-up/my-account/my-account.component.html
+++ b/src/app/Sign-up/my-account/my-account.component.html
@@ -8,14 +8,14 @@
   <a routerLink="/myaccount/motdepasse" (click)="getMotdePasse()">
   <p [ngClass]="{'lien-menu':motDePasse, 'lien-menu-active':!motDePasse}">Mot de Passe</p>
   </a>
-  <a routerLink="/myaccount/commandes" (click)="getCommandes()">
-  <p [ngClass]="{'lien-menu':commandes, 'lien-menu-active':!commandes}">Adresses</p>
-  </a>
   <a routerLink="/myaccount/adresses" (click)="getAdresses()">
-  <p [ngClass]="{'lien-menu':adresses, 'lien-menu-active':!adresses}">Commandes</p>
+  <p [ngClass]="{'lien-menu':adresses, 'lien-menu-active':!adresses}">Adresses</p>
+  </a>
+  <a routerLink="/myaccount/commandes" (click)="getCommandes()">
+  <p [ngClass]="{'lien-menu':commandes, 'lien-menu-active':!commandes}">Commandes</p>
   </a>
 <a *ngIf="buyerService.getAuthenticatedRole() == 'ROLE_ADMIN'" routerLink="/admin-home">
-<p [ngClass]="{'lien-menu':adresses, 'lien-menu-active':!adresses}">Retour Console Admin</p>
+<p class="lien-menu">Retour Console Admin</p>
 </a>
   </div>
   
@@ -26,12 +26,12 @@
   <a routerLink="/myaccount/motdepasse" (click)="getMotdePasse()" >
   <p [ngClass]="{'lien-menu-md':motDePasse, 'lien-menu-active-md':!motDePasse}">Mot&nbsp;de&nbsp;Passe</p>
   </a>
-  <a routerLink="/myaccount/commandes" (click)="getCommandes()">
-  <p [ngClass]="{'lien-menu-md':commandes, 'lien-menu-active-md':!commandes}">Adresses</p>
-  </a>
   <a routerLink="/myaccount/adresses" (click)="getAdresses()">
-  <p [ngClass]="{'lien-menu-md':adresses, 'lien-menu-active-md':!adresses}">Commandes</p>
-  </a>
+    <p [ngClass]="{'lien-menu':adresses, 'lien-menu-active':!adresses}">Adresses</p>
+    </a>
+    <a routerLink="/myaccount/commandes" (click)="getCommandes()">
+    <p [ngClass]="{'lien-menu':commandes, 'lien-menu-active':!commandes}">Commandes</p>
+    </a>
   </div>
   <div class="col-md-9 col-sm-12 ">
   
