--- a/src/app/Sign-up/my-account/adresses/adresses.component.html
+++ b/src/app/Sign-up/my-account/adresses/adresses.component.html
@@ -3,14 +3,14 @@
   <div class=" row">
     <div class="col-12">
       <div class="titlewline">
-        <div class="titlewline__title">Voter carnet d'adresses <br /></div>
+        <div class="titlewline__title">Votre adresse <br /></div>
       </div>
     </div>
   </div>
 
   <form [formGroup]="registerForm" (ngSubmit)="onSubmit()">
   <div class="account__box ">
-      <div class="account__box__title mb-3"><h5>Votre nouvelle adresse</h5></div>
+      <!-- <div class="account__box__title mb-3"><h5>Votre nouvelle adresse</h5></div> -->
       <div class="box_inner">
           <div class="form-group row">
               <label for="colFormLabel" class="label col-md-3 col-form-label"
@@ -34,7 +34,7 @@
             </div>
             <div class="form-group row">
               <label for="colFormLabel" class="label col-md-3 col-form-label"
-                >Comlément Adresse</label
+                >Complément Adresse</label
               >
               <div class="col-md-6">
                 <input
