Seller name in display annonces fixed

--- a/src/app/PageAdmin/admin-company-list/admin-company-list.component.html
+++ b/src/app/PageAdmin/admin-company-list/admin-company-list.component.html
@@ -19,7 +19,7 @@
 <div class="col-md-8 mt-1">
   <cdk-virtual-scroll-viewport itemSize="100" class="VSviewport">
     <table class="table table-hover table-striped list">
-      <thead class="head sticky">
+      <thead class="head sticky-top">
         <tr>
           <th>
             Raison Sociale
