--- a/src/app/PageAdmin/admin-announce-details/admin-announce-details.component.html
+++ b/src/app/PageAdmin/admin-announce-details/admin-announce-details.component.html
@@ -4,29 +4,29 @@
   <div class="text-center announcePiecePage">
     <div class="row">
     <div class="col-lg-12 col-md-12 text-center announceTitle">
-      {{annonce.pieceName}} {{annonce.brand}} {{annonce.model}} {{annonce.cylinder}}
+      {{announce.pieceName}} {{announce.brand}} {{announce.model}} {{announce.cylinder}}
       <hr />
     </div>
 
     <div class="row">
     <div class="col-lg-4 col-xs-12 announceImageDiv">
-      <img class="announceImage col-sm-12" src="{{annonce.image}}" placeholder="image">
+      <img class="announceImage col-sm-12" src="{{announce.image}}" placeholder="image">
     </div>
   
       <div class="col-lg-4 col-xs-12 announceDescription">
 
-        <p class="announceDesc font-weight-bold">
+        <p class="announce font-weight-bold">
           <br>
-          Marque: {{annonce.brand}}
+          Marque: {{announce.brand}}
           <br>
-          Modèle: {{annonce.model}}
+          Modèle: {{announce.model}}
           <br>
-          Cylindrée: {{annonce.cylinder}}
+          Cylindrée: {{announce.cylinder}}
           <br>
-          Année: {{annonce.year}}
+          Année: {{announce.year}}
         </p>
 
-        <p> Description: {{annonce.description}}</p>
+        <p> Description: {{announce.description}}</p>
 
         <p class="announceState">
           Etat de la pièce: 
