--- a/src/app/Buyer/announce-item/announce-item.component.css
+++ b/src/app/Buyer/announce-item/announce-item.component.css
@@ -24,6 +24,8 @@
 }
 .card-body{
     padding:1.65rem;
+    padding-bottom: 0%;
+    padding-top: 0%;
     font-family: 'Montserrat', Arial, Helvetica, sans-serif;
     font-weight: 600;
     box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
