--- a/src/app/Buyer/announce-item/announce-item.component.html
+++ b/src/app/Buyer/announce-item/announce-item.component.html
@@ -19,7 +19,7 @@
             Moto:
           </div>
           <div class="text-muted">
-            {{announce.brand}}
+            {{announce.brand}} - {{announce.model}} - {{announce.cylinder}}
           </div>
         </div>
 
