--- a/src/app/Buyer/buyer-home/search-bar/search-bar.component.html
+++ b/src/app/Buyer/buyer-home/search-bar/search-bar.component.html
@@ -2,6 +2,6 @@
   <h5 *ngIf="screenWidth > 990">Moteur de recherche &nbsp;&nbsp;</h5>
     <input type="text" class="form-control" placeholder="pièces...." #searchInput>
     <div class="input-group-append">
-      <button class="btn btn-outline-secondary" type="button">Vroum...</button>
+      <button class="btn btn-outline-secondary" type="button">Go</button>
     </div>
   </div>
