--- a/src/app/Buyer/buyer-home/search-immat/search-immat.component.html
+++ b/src/app/Buyer/buyer-home/search-immat/search-immat.component.html
@@ -10,7 +10,7 @@
 <div class="input-group mt-5 mb-3">
     <input type="text" class="form-control" placeholder="AZ-234-ER" #searchInput>
     <div class="input-group-append">
-      <button class="btn btn-outline-secondary" type="button" (click)="getPlaqueInfo(searchInput.value)">Vroum...</button>
+      <button class="btn btn-outline-secondary" type="button" (click)="getPlaqueInfo(searchInput.value)">Go</button>
     </div>
   </div>
 </div>
