--- a/src/app/Buyer/buyer-home/search-vhl/search-vhl.component.html
+++ b/src/app/Buyer/buyer-home/search-vhl/search-vhl.component.html
@@ -11,9 +11,10 @@
     <div id="card-element-616950" class="collapse">
       <div class="card-body">
         <div class="input-group mb-3">
+          
           <select [(ngModel)]="newBrand" class="mb-2" name="brand" id="brand" class="custom-select" id="selectMarque"
             (change)="onSelectBrand($event.target.value)">
-            <option selected="selected" value="0">
+            <option [value]="newBrand">
               Marque
             </option>
             <option *ngFor="let brand of allMotosB" value="{{brand}}">
@@ -25,7 +26,7 @@
         <div class="input-group mb-3">
           <select [(ngModel)]="newModel" class="custom-select" id="modele" (change)="onSelectModele($event.target.value)"
             [disabled]="!choixMarque">
-            <option selected="selected" value="0">
+            <option [value]="newModel">
               Modèle
             </option>
 
@@ -37,7 +38,7 @@
 
         <div class="input-group mb-3">
           <select [(ngModel)]="newCylindree" class="custom-select" id="cylindree" (change)="onSelectCylindree($event.target.value)" [disabled]="!choixModele">
-            <option selected="selected" value="0">Cylindrée</option>
+            <option [value]="newCylindree">Cylindrée</option>
 
             <option *ngFor="let cylindree of allMotosC" value="{{cylindree}}">
               {{cylindree}}
@@ -49,14 +50,14 @@
 
         <div class="input-group mb-3">
           <select [(ngModel)]="newYear" class="custom-select" id="annee" [disabled]="!choixCylindree" (change)="onSelectYear($event.target.value)">
-            <option selected="selected">Année</option>
+            <option [value]="newYear">Année</option>
 
             <option *ngFor="let year of allMotosY" value="{{year}}">{{year}}</option>
           </select>
 
 
           <div class="input-group-append">
-            <button class="btn btn-outline-secondary" type="button" id="button-addon2" (click)="sendResearch()">Vroum...</button>
+            <button class="btn btn-outline-secondary" type="button" id="button-addon2" (click)="sendResearch()">Go</button>
           </div>
         </div>
       </div>
