--- a/src/app/All/error-page/error-page.component.html
+++ b/src/app/All/error-page/error-page.component.html
@@ -1,3 +1,3 @@
 <body>
-  <button mat-raised-button routerLink="/" class="returnBtn">Retour</button>
+  <button mat-raised-button routerLink="/home" class="returnBtn">Retour</button>
 </body>
