--- a/src/app/Seller/page-announce-pro/tab-creation/tab-creation.component.html
+++ b/src/app/Seller/page-announce-pro/tab-creation/tab-creation.component.html
@@ -19,9 +19,9 @@
                   
                 <div class="input-group mb-3 form-group">
                   <select  class="custom-select" id="brand" formControlName="brand" [(ngModel)]="brand"
-                  [ngClass]="{ 'is-invalid': submitted && f.brand.errors }">
-                    <option selected="">Marque</option>
-                    <option *ngFor="let brand of brands">{{brand}}</option>
+                  [ngClass]="{ 'is-invalid': submitted && f.brand.errors }" (change)="onSelectBrand($event.target.value)">
+                    <option [value]="brand">Marque</option>
+                    <option *ngFor="let brand of allMotosB" value="{{brand}}">{{brand}}</option>
                   </select>
                   <div *ngIf="submitted && f.brand.errors" class="invalid-feedback">
                     <div *ngIf="f.brand.errors.required">champs requis</div>
@@ -30,9 +30,9 @@
 
                 <div class="input-group mb-3">
                   <select class="custom-select" id="model" formControlName="model" [(ngModel)]="model"
-                  [ngClass]="{ 'is-invalid': submitted && f.model.errors }">
-                    <option selected="selected">Modèle</option>
-                    <option *ngFor="let motoModel of motoModels">{{motoModel}}</option>
+                  [ngClass]="{ 'is-invalid': submitted && f.model.errors }" (change)="onSelectModele($event.target.value)">
+                    <option [value]="model">Modèle</option>
+                    <option *ngFor="let model of allMotosM" value="{{model}}">{{model}}</option>
                   </select>
                   <div *ngIf="submitted && f.model.errors" class="invalid-feedback">
                     <div *ngIf="f.model.errors.required">champs requis</div>
@@ -41,9 +41,9 @@
 
                 <div class="input-group mb-3">
                   <select class="custom-select" id="cylinder" formControlName="cylinder" [(ngModel)]="cylinder"
-                  [ngClass]="{ 'is-invalid': submitted && f.cylinder.errors }">
-                    <option selected="selected">Cylindré</option>
-                    <option *ngFor="let cylinder of cylinders">{{cylinder}}</option>
+                  [ngClass]="{ 'is-invalid': submitted && f.cylinder.errors }" (change)="onSelectCylindree($event.target.value)">
+                    <option [value]="cylinder" >Cylindrée</option>
+                    <option *ngFor="let cylindree of allMotosC" value="{{cylindree}}">{{cylindree}}</option>
                   </select>
                   <div *ngIf="submitted && f.cylinder.errors" class="invalid-feedback">
                     <div *ngIf="f.cylinder.errors.required">champs requis</div>
@@ -52,9 +52,9 @@
 
                 <div class="input-group mb-3">
                   <select class="custom-select" id="year" formControlName="year" [(ngModel)]="year"
-                  [ngClass]="{ 'is-invalid': submitted && f.year.errors }">
-                    <option selected="selected">Année</option>
-                    <option *ngFor="let year of years">{{year}}</option>
+                  [ngClass]="{ 'is-invalid': submitted && f.year.errors }" (change)="onSelectYear($event.target.value)">
+                    <option [value]="year" >Année</option>
+                    <option *ngFor="let year of allMotosY" value="{{year}}">{{year}}</option>
                   </select>
                   <div *ngIf="submitted && f.year.errors" class="invalid-feedback">
                     <div *ngIf="f.year.errors.required">champs requis</div>
